--- a/env.example
+++ b/env.example
@@ -1,8 +1,11 @@
+# Django Settings
 DJANGO_SETTINGS_MODULE=backend.settings
-SECRET_KEY=change-me
-DEBUG=1
+SECRET_KEY=change-me-to-secure-random-key
+DEBUG=true
 ALLOWED_HOSTS=localhost,127.0.0.1
+CSRF_TRUSTED_ORIGINS=localhost,127.0.0.1
 
+# Database Configuration
 DATABASE_URL=postgres://your-db-username:your-db-password@db:5432/travel_marketplace
 
 SQL_ENGINE=django.db.backends.postgresql
@@ -11,21 +14,43 @@ SQL_USER=your-db-username
 SQL_PASSWORD=your-db-password
 SQL_HOST=db
 SQL_PORT=5432
+DB_CONN_MAX_AGE=300
 
+# CORS Configuration
 CORS_ALLOWED_ORIGINS=http://localhost:3000
-CSRF_TRUSTED_ORIGINS=http://localhost:3000
-ACCESS_TOKEN_LIFETIME_MINUTES=5
-REFRESH_TOKEN_LIFETIME_DAYS=7
-DB_CONN_MAX_AGE=60
+CORS_ALLOW_CREDENTIALS=true
+
+# JWT Token Configuration
+ACCESS_TOKEN_LIFETIME_MINUTES=15
+REFRESH_TOKEN_LIFETIME_DAYS=30
 
 # Email Configuration (Mailgun)
-MAILGUN_SMTP_SERVER=smtp.mailgun.org
-MAILGUN_SMTP_PORT=587
-MAILGUN_SMTP_LOGIN=your-mailgun-smtp-login
-MAILGUN_SMTP_PASSWORD=your-mailgun-smtp-password
-DEFAULT_FROM_EMAIL=noreply@yourdomain.com
+# Option 1: Use Mailgun HTTP API (RECOMMENDED - bypasses SMTP port blocks)
+MAILGUN_API_KEY=your-mailgun-api-key
+MAILGUN_DOMAIN=goholiday.id
+# Optional: Use EU region (default is US)
+# MAILGUN_API_URL=https://api.eu.mailgun.net/v3
+
+# Option 2: Use SMTP (may be blocked by firewall - use API instead)
+# MAILGUN_SMTP_SERVER=smtp.mailgun.org
+# MAILGUN_SMTP_PORT=587
+# MAILGUN_SMTP_LOGIN=your-mailgun-smtp-login
+# MAILGUN_SMTP_PASSWORD=your-mailgun-smtp-password
+
+DEFAULT_FROM_EMAIL=noreply@goholiday.id
 FRONTEND_URL=http://localhost:3000
 
-# Celery Configuration (for Docker)
+# Celery Configuration
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/0
+
+# Redis Cache Configuration
+REDIS_URL=redis://redis:6379/1
+
+# Security Settings (Production)
+SECURE_SSL_REDIRECT=false
+SECURE_HSTS_SECONDS=31536000
+SECURE_HSTS_INCLUDE_SUBDOMAINS=false
+SECURE_HSTS_PRELOAD=false
+SESSION_COOKIE_SECURE=false
+CSRF_COOKIE_SECURE=false
